[workspace]
resolver = "2"
members = [
  "bitcoin-wallet",
  "electrum-pool",
  "libp2p-rendezvous-node",
  "libp2p-tor",
  "monero-oxide-ext",
  "monero-rpc-pool",
  "monero-sys",
  "monero-tests",
  "monero_wallet",
  "monero-wallet-ng",
  "src-tauri",
  "swap",
  "swap-asb",
  "swap-controller",
  "swap-controller-api",
  "swap-core",
  "swap-db",
  "swap-env",
  "swap-feed",
  "swap-fs",
  "swap-machine",
  "swap-orchestrator",
  "swap-p2p",
  "swap-proptest",
  "swap-serde",
  "throttle",
  "tracing-ext",
]

[workspace.dependencies]
# Bitcoin Dev Kit
bdk = "0.28"
bdk_chain = "0.23.0"
bdk_core = "0.6.0"
bdk_electrum = { version = "0.23.0", default-features = false }
bdk_wallet = "2.0.0"
bitcoin = { version = "0.32", features = ["rand", "serde"] }

# monero-oxide
monero-address = { git = "https://github.com/kayabaNerve/monero-oxide.git" }
monero-daemon-rpc = { git = "https://github.com/kayabaNerve/monero-oxide.git" }
monero-interface = { git = "https://github.com/kayabaNerve/monero-oxide.git" }
monero-oxide = { git = "https://github.com/kayabaNerve/monero-oxide.git" }
monero-oxide-wallet = { git = "https://github.com/kayabaNerve/monero-oxide.git", package = "monero-wallet" }
monero-simple-request-rpc = { git = "https://github.com/kayabaNerve/monero-oxide.git" }

# Cryptography
curve25519-dalek = { version = "4", package = "curve25519-dalek", features = ["rand_core", "serde"] }
curve25519-dalek-ng = { package = "curve25519-dalek-ng", version = "4" }
ecdsa_fun = { version = "0.10", default-features = false, features = ["libsecp_compat", "serde", "adaptor"] }
rand = "0.8"

# Randomness
rand_chacha = "0.3"
sha2 = "0.10"
sigma_fun = { version = "0.7", default-features = false }
zeroize = "^1.5"

# Async
async-trait = "0.1"

# Serialization
semver = { version = "1.0" }
serde_cbor = "0.11"
strum = { version = "0.26" }

anyhow = "1"
backoff = { version = "0.4", features = ["futures", "tokio"] }
bmrng = "0.5.2"
futures = { version = "0.3", default-features = false, features = ["std"] }
jsonrpsee = { version = "0.25", default-features = false }
libp2p = { version = "0.53.2" }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rust_decimal = { version = "1", features = ["serde-float"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"

data-encoding = "2.6.0"
hex = "0.4"
toml = "0.9.5"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
typeshare = "1.0"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Tokio
testcontainers = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["io", "codec", "rt"] }

# Tor/Arti crates
arti-client = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0", default-features = false }
libp2p-tor = { path = "./libp2p-tor" }
safelog = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-cell = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-hscrypto = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-hsservice = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-llcrypto = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-proto = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }
tor-rtcompat = { git = "https://github.com/eigenwallet/arti", branch = "downgraded_rusqlite_arti_2_2_0" }

# Terminal Utilities
console = "0.16"
dialoguer = "0.11"

# Our dependencies in other git repositories
dfx-swiss-sdk = { git = "https://github.com/eigenwallet/dfx-swiss-rs" }

# Build dependencies
vergen = { version = "8.3", default-features = false, features = ["build", "git", "git2"] }
vergen-git2 = { version = "1", features = ["build"] }

[patch.crates-io]
# patch until new release https://github.com/thomaseizinger/rust-jsonrpc-client/pull/51
jsonrpc_client = { git = "https://github.com/delta1/rust-jsonrpc-client.git", rev = "3b6081697cd616c952acb9c2f02d546357d35506" }

# Force up to date version of crunchy that fixes linux->windows cross compilation
crunchy = { git = "https://github.com/eira-fransham/crunchy", rev = "ba7b86cea6ba89ccfc72ccb24cc4a4ac6d9c6272" }

[workspace.lints]
rust.unused_crate_dependencies = "warn"
# prevents accidental infinite recursion when implementing a trait method by calling a method with the same name
rust.unconditional_recursion = "deny"

[profile.release]
codegen-units = 1
lto = "fat"
