[package]
name = "swap"
version = "4.4.1"
authors = ["The COMIT guys <hello@comit.network>"]
edition = "2024"
description = "XMR/BTC trustless atomic swaps."

[lib]
name = "swap"

[features]
tauri = ["dep:tauri"]

[dependencies]
# Bitcoin Dev Kit
bdk = { workspace = true }
bdk_wallet = { workspace = true }
bitcoin = { workspace = true }

# Wallets
bitcoin-wallet = { path = "../bitcoin-wallet" }
monero_wallet = { path = "../monero_wallet" }

# Tor
arti-client = { workspace = true, features = ["static-sqlite", "tokio", "rustls", "onion-service-service", "hs-pow-full", "ephemeral-keystore"] }
tor-hscrypto = { workspace = true }
tor-hsservice = { workspace = true }
tor-llcrypto = { workspace = true }
tor-rtcompat = { workspace = true, features = ["tokio"] }

# LibP2P
libp2p = { workspace = true, features = ["tcp", "yamux", "dns", "noise", "request-response", "ping", "rendezvous", "identify", "macros", "cbor", "json", "tokio", "serde", "rsa", "websocket"] }
libp2p-tor = { path = "../libp2p-tor", features = ["listen-onion-service"] }

# Error handling
anyhow = { workspace = true }
backoff = { workspace = true }
thiserror = { workspace = true }

# Crypto / Decoding / Encoding
curve25519-dalek = { workspace = true, features = ["rand_core"] }
data-encoding = { workspace = true }
ecdsa_fun = { workspace = true, features = ["libsecp_compat", "serde", "adaptor"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Randomness
rand = { workspace = true }

# Other stuff
bmrng = { workspace = true }
config = { version = "0.14", default-features = false, features = ["toml"] }
electrum-pool = { path = "../electrum-pool" }
jsonrpsee = { workspace = true, features = ["server"] }
moka = { version = "0.12", features = ["sync", "future"] }
monero-address = { workspace = true }
monero-oxide-ext = { path = "../monero-oxide-ext" }
monero-rpc-pool = { path = "../monero-rpc-pool" }
monero-seed = { git = "https://github.com/monero-oxide/monero-wallet-util.git", package = "monero-seed" }
monero-sys = { path = "../monero-sys" }
pem = "3.0"
proptest = "1"
regex = "1.10"
reqwest = { workspace = true, features = ["http2", "rustls-tls-native-roots", "stream", "socks"] }
rust_decimal = { version = "1", features = ["serde-float"] }
safelog = { workspace = true }
semver = { workspace = true }
structopt = "0.3"
swap-controller-api = { path = "../swap-controller-api" }
swap-core = { path = "../swap-core" }
swap-db = { path = "../swap-db" }
swap-env = { path = "../swap-env" }
swap-feed = { path = "../swap-feed" }
swap-fs = { path = "../swap-fs" }
swap-machine = { path = "../swap-machine" }
swap-p2p = { path = "../swap-p2p" }
swap-proptest = { path = "../swap-proptest" }
swap-serde = { path = "../swap-serde" }
tauri = { version = "2.0", features = ["config-json5"], optional = true, default-features = false }
time = "0.3"
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
void = "1"
zeroize = { workspace = true }

# Tokio
tokio = { workspace = true, features = ["process", "fs", "net", "parking_lot", "rt"] }
tokio-util = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "1", features = ["macros"] }
strum = { workspace = true, features = ["derive"] }
typeshare = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
bitcoin-harness = { git = "https://github.com/eigenwallet/bitcoin-harness-rs", branch = "master" }
data-encoding = { workspace = true }
mockito = "1.4"
monero-harness = { path = "../monero-harness" }
proptest = "1"
swap-p2p = { path = "../swap-p2p", features = ["test-support"] }
tempfile = "3"
testcontainers = "0.15"
tokio = { workspace = true, features = ["test-util"] }
tracing-ext = { path = "../tracing-ext" }

[build-dependencies]
anyhow = { workspace = true }
vergen-git2 = { workspace = true }
